objects/Article__c.object
<CustomObject>
    <fields>
        <fullName>Saved_Explanation_of_Script__c</fullName>
        <label>Saved Explanation of Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_How_To__c</fullName>
        <label>Saved How To</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_Problem__c</fullName>
        <label>Saved Problem</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_Solution__c</fullName>
        <label>Saved Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_Usage__c</fullName>
        <label>Saved Usage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SearchableAttachments__c</fullName>
        <label>SearchableAttachments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Searchable_from_Google__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, the shadow document is to be generated and made available to external search engines. If unchecked, shadow document should be delete.</description>
        <inlineHelpText>Please tick the check-box if you want Google to index this content. If ticked, then user can search for this content from Google also. However only a small piece of the content would be visible on Google, to view the full content user(s) would need to log</inlineHelpText>
        <label>Searchable from Google</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Products_Feature__c</fullName>
        <label>Selected Products Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Products__c</fullName>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShowAttributes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ShowAttributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SolutionID__c</fullName>
        <externalId>true</externalId>
        <label>SolutionID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <inlineHelpText>Provide a description on how to fix the error</inlineHelpText>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>AE Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Alias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metrics Driven Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Search Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_status__c</fullName>
        <label>Sub status</label>
        <picklist>
            <picklistValues>
                <fullName>Prev Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Articles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suggested_Tag_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suggested Tag  CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suggested_Tag__c</fullName>
        <inlineHelpText>If you didn’t find an appropriate tag or want to have a new tag, then please type that here. Our expert will review it and if found apt then this content would be tagged with your suggested one(s) as well. Use coma to separate multiple tags.</inlineHelpText>
        <label>Suggested Tag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>Enter the content summary.</inlineHelpText>
        <label>Summary</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIP_Hardware_Version__c</fullName>
        <label>TIP Hardware Version</label>
        <picklist>
            <picklistValues>
                <fullName>RG-2015.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF-2015.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF-2015.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF-2014.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF-2014.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2015.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2014.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2013.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2013.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2013.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2012.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2012.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2011.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2011.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2011.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2010.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-2011.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-2010.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-2010.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-2009.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB-2009.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB-2008.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA-2008.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA-2007.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1050.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>570T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>545CK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>388VDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>330HiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>233L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIP_Version__c</fullName>
        <description>This field is used to capture the software version for Tensilica Articles</description>
        <label>TIP Software Version</label>
        <picklist>
            <picklistValues>
                <fullName>RG-2015.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RG-2015.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF-2015.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF-2015.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF-2014.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF-2014.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2015.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2014.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2013.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2013.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-2013.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2012.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2012.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2011.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2011.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2011.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-2010.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-2011.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-2010.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-2010.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC-2009.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB-2009.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB-2008.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA-2008.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA-2007.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1050.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIP_Xplorer_Version__c</fullName>
        <label>TIP Xplorer Version</label>
        <picklist>
            <picklistValues>
                <fullName>XX 7.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 7.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 6.0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 6.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 6.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 6.0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 5.0.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 5.0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 5.0.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 5.0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 5.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 4.0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 4.0.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 4.0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 4.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 4.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 4.0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 3.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 3.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 3.0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 2.1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 2.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 2.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 2.1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 2.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 1.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 1.0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX 0.9.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Enter content title here.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Name__c</fullName>
        <label>URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <label>Usage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Description__c</fullName>
        <label>Limelight Embed Code</label>
        <length>28728</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Video_Transcript__c</fullName>
        <inlineHelpText>The text here will be searchable from COS this field will not be visible on COS.</inlineHelpText>
        <label>Video Transcript</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cloned_article_Id__c</fullName>
        <label>cloned article Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloneid__c</fullName>
        <label>cloneid</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_draft_date__c</fullName>
        <label>First Draft Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>first_in_review_date__c</fullName>
        <label>First In Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>first_needs_correction_date__c</fullName>
        <label>First Needs Correction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>first_proposed_date__c</fullName>
        <label>First Proposed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>first_rejected_date__c</fullName>
        <label>First Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>large_product__c</fullName>
        <label>Product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>submitter_region__c</fullName>
        <label>Author region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tagids__c</fullName>
        <label>Tag ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Article</label>
    <listViews>
        <fullName>Article_View</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>,11585402,11599346,11631794,11631890,11638226,11667776,11681720,11705900</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Article__c.Error_Message,Article__c.How_To,Article__c.Script</value>
        </filters>
        <label>Article View_Obsolete</label>
        <language>en_US</language>
        <sharedTo>
            <role>X5_1_1_1_CS_AE</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Article_View_Obsolete</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Obsolete</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>mukesh</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/3/2016 12:00 AM</value>
        </filters>
        <label>Article View_Obsolete</label>
        <language>en_US</language>
        <sharedTo>
            <role>X5_1_1_1_CS_AE</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>COS_Microsite_Moderator_Article</fullName>
        <filterScope>Queue</filterScope>
        <label>COS Microsite Moderator</label>
        <queue>COS_Microsite_Moderator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CR</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Title__c</columns>
        <columns>Channel__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>CR</label>
        <language>en_US</language>
        <sharedTo>
            <role>X5_1_1_1_CS_AE</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cadence_Online_Support</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>COS</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>notEqual</operation>
            <value>Japanese</value>
        </filters>
        <label>Cadence Online Support</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Content_Publish</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_types__c</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_types__c</field>
            <operation>includes</operation>
            <value>Rapid Adoption Kits</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>Critical Alerts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Custom_IC_Design</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>CIC</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>notEqual</operation>
            <value>Japanese</value>
        </filters>
        <label>Custom IC Design</label>
    </listViews>
    <listViews>
        <fullName>DSG_Kpub_Dashboard_FED</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <columns>Submitter__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Additional_Comments__c</columns>
        <columns>Document_Author_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Author_s__c</columns>
        <columns>ReviewerID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Channel__c</columns>
        <columns>Published_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Review,Needs Correction</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>English</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Article__c.Content_publish</value>
        </filters>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>FED</value>
        </filters>
        <label>DSG (Kpub) Dashboard (FED)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DSG_Kpub_Dashboard_ICD</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <columns>Submitter__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Additional_Comments__c</columns>
        <columns>Document_Author_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Author_s__c</columns>
        <columns>ReviewerID__c</columns>
        <columns>Channel__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Published_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Review,Needs Correction</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>English</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Article__c.Content_publish</value>
        </filters>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>ICD</value>
        </filters>
        <label>DSG (Kpub) Dashboard (ICD)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Design_IP</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>DIP</value>
        </filters>
        <label>Design IP</label>
    </listViews>
    <listViews>
        <fullName>Digital_IC_Design</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>ICD</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>notEqual</operation>
            <value>Japanese</value>
        </filters>
        <label>Digital IC Design</label>
    </listViews>
    <listViews>
        <fullName>Front_End_Design</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>FED</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>notEqual</operation>
            <value>Japanese</value>
        </filters>
        <label>Front End Design</label>
    </listViews>
    <listViews>
        <fullName>Functional_Verification</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>FEG</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>notEqual</operation>
            <value>Japanese</value>
        </filters>
        <label>Front End Group</label>
    </listViews>
    <listViews>
        <fullName>Hosted_Design</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KTeam__c</field>
            <operation>equals</operation>
            <value>HD</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>notEqual</operation>
            <value>Japanese</value>
        </filters>
        <label>Hosted Design</label>
    </listViews>
    <listViews>
        <fullName>Japan_Articles</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Japanese</value>
        </filters>
        <label>Japan Articles</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Article Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Articles</pluralLabel>
    <recordTypes>
        <fullName>Content_publish</fullName>
        <active>true</active>
        <description>Knowledge Submission for Internal Employees</description>
        <label>Content publish</label>
    </recordTypes>
    <recordTypes>
        <fullName>Error_Message</fullName>
        <active>true</active>
        <description>Extended help about an error message</description>
        <label>Error Message</label>
    </recordTypes>
    <recordTypes>
        <fullName>How_To</fullName>
        <active>true</active>
        <description>Explain how to accomplish a particular task</description>
        <label>How To</label>
    </recordTypes>
    <recordTypes>
        <fullName>Script</fullName>
        <active>true</active>
        <description>Document a Script or AE-Ware</description>
        <label>Script</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solution</fullName>
        <active>true</active>
        <description>Document the workaround to a particular problem</description>
        <label>Solution</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_if_Article_Publisher</fullName>
        <active>false</active>
        <description>Validates that a user has the &quot;Article
			Publisher&quot; flag to be able to change the status of an Article to
			&quot;Published&quot;</description>
        <errorConditionFormula>AND( $User.LastName &lt;&gt;&apos;Migration&apos;,$User.LastName &lt;&gt;&apos;Integration&apos;,ISPICKVAL(Status__c, &apos;Published&apos;)&amp;&amp; ISPICKVAL(Channel__c, &apos;Customer&apos;) &amp;&amp;
(NOT($User.Article_Publisher__c)&amp;&amp;  NOT( ISCHANGED( Deleted_Attachment__c) )  ))</errorConditionFormula>
        <errorMessage>You do not have permission to publish an Article. To get
			publishing help from the knowledge team, set the Article status to
			Proposed, and then save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_if_Channel_is_Set_When_Publishing</fullName>
        <active>true</active>
        <description>When an article is set to Published, Channel must not be
			blank.</description>
        <errorConditionFormula>AND(
$User.LastName &lt;&gt; &apos;Migration&apos;, 
ISPICKVAL(Status__c, &apos;Published&apos;),
ISPICKVAL( Channel__c,&apos;&apos; )
)</errorConditionFormula>
        <errorMessage>You must select a Channel if you want to publish the
			article.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cos_Visibility_Date_Can_Not_Be_Past</fullName>
        <active>true</active>
        <description>COS Visibility date can not be in past</description>
        <errorConditionFormula>AND 
( 
$User.LastName &lt;&gt; &apos;Code Migration&apos;,	
$User.LastName &lt;&gt; &apos;Migration&apos;, 
OR(ISNEW(),(ISCHANGED(Published_Date__c))), 
OR(DATEVALUE(Published_Date__c) &lt; Today(), DATEVALUE(Published_Date__c) &gt; (Today() + 90)) 
)</errorConditionFormula>
        <errorDisplayField>Access_Rights__c</errorDisplayField>
        <errorMessage>COS Visibility Date cannot be set for more than 90 days in Future</errorMessage>
    </validationRules>
</CustomObject>